Minor formatting tweaks

--- a/_posts/2020-08-16-GPT-3_primer.md
+++ b/_posts/2020-08-16-GPT-3_primer.md
@@ -44,7 +44,7 @@ Metrics are one thing, but the best way to get a feel for the capabilities of th
 
 [Writing like an attorney](https://twitter.com/f_j_j_/status/1283349995144359937?s=20)
 
-[“Search engine”... that isn’t searching anything, it just knows the answers][https://twitter.com/paraschopra/status/1284801028676653060?s=20]
+[“Search engine”... that isn’t searching anything, it just knows the answers](https://twitter.com/paraschopra/status/1284801028676653060?s=20)
 
 [More project links](https://github.com/elyase/awesome-gpt3)
 
@@ -86,11 +86,11 @@ It is also possible to use the model by providing a prompt with no examples (“
 
 The few-shot learning approach has several benefits:
 
-First, few-shot learning may make machine-learning more accessible. The pool of people who would feel comfortable entering a prompt like the one above is MUCH larger than the pool of people who have the technical knowledge to fine-tune a model. 
+* First, few-shot learning may make machine-learning more accessible. The pool of people who would feel comfortable entering a prompt like the one above is MUCH larger than the pool of people who have the technical knowledge to fine-tune a model. 
 
-Second, prompting models in this way may pave the way for applications of models in domains where acquiring the large amounts of structured training data necessary for fine-tuning is infeasible.
+* Second, prompting models in this way may pave the way for applications of models in domains where acquiring the large amounts of structured training data necessary for fine-tuning is infeasible.
 
-Lastly, few-shot learning makes the model more flexible. With the typical fine-tuning approach, the underlying model weights are actually changed for a specific task, so fine-tuning sacrifices generalizable performance for better performance on a particular application of the model. By contrast, a model that uses the few-shot learning approach does not change the underlying model.
+* Lastly, few-shot learning makes the model more flexible. With the typical fine-tuning approach, the underlying model weights are actually changed for a specific task, so fine-tuning sacrifices generalizable performance for better performance on a particular application of the model. By contrast, a model that uses the few-shot learning approach does not change the underlying model.
 
 Few-shot learning is not just a viable alternative to fine-tuning with the current state of machine learning. As the graph below shows, few-shot learning works better the larger the model is. Combined with the performance gains from increasing model size, it’s likely that there will be a trend towards larger models that use few-shot learning.
 
