--- a/_posts/2020-08-16-GPT-3_primer.md
+++ b/_posts/2020-08-16-GPT-3_primer.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: GPT-3 Primer
-image: /img/hello_world.jpeg
+image: /img/GPT-3/OpenAI_logo.png
 ---
 
 <h3>What is it?</h3>
