Changing project examples to bulleted list

--- a/_posts/2020-08-16-GPT-3_primer.md
+++ b/_posts/2020-08-16-GPT-3_primer.md
@@ -34,17 +34,17 @@ Overall, the model is able to successfully answer two digit addition and subtrac
 
 Metrics are one thing, but the best way to get a feel for the capabilities of the model is to see the outputs. Many people in the beta invite have been demonstrating potential use cases. Here are some highlights:
 
-[Coding in JavaScript](https://twitter.com/sharifshameem/status/1282676454690451457?s=20)
+* [Coding in JavaScript](https://twitter.com/sharifshameem/status/1282676454690451457?s=20)
 
-[Coding in Python](https://beta.openai.com/?app=productivity&example=4_4_0)
+* [Coding in Python](https://beta.openai.com/?app=productivity&example=4_4_0)
  
-[Summarizing an NDA for 2nd grader](https://vimeo.com/427957683/10634d1706)
+* [Summarizing an NDA for 2nd grader](https://vimeo.com/427957683/10634d1706)
 
-[More examples of summarization and simplification](https://andrewmayneblog.wordpress.com/2020/06/13/openai-api-alchemy-summarization/)
+* [More examples of summarization and simplification](https://andrewmayneblog.wordpress.com/2020/06/13/openai-api-alchemy-summarization/)
 
-[Writing like an attorney](https://twitter.com/f_j_j_/status/1283349995144359937?s=20)
+* [Writing like an attorney](https://twitter.com/f_j_j_/status/1283349995144359937?s=20)
 
-[“Search engine”... that isn’t searching anything, it just knows the answers](https://twitter.com/paraschopra/status/1284801028676653060?s=20)
+* [“Search engine”... that isn’t searching anything, it just knows the answers](https://twitter.com/paraschopra/status/1284801028676653060?s=20)
 
 [More project links](https://github.com/elyase/awesome-gpt3)
 
