Fixing Python API link

--- a/_posts/2020-08-16-GPT-3_primer.md
+++ b/_posts/2020-08-16-GPT-3_primer.md
@@ -38,7 +38,7 @@ Metrics are one thing, but the best way to get a feel for the capabilities of th
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This is mind blowing.<br><br>With GPT-3, I built a layout generator where you just describe any layout you want, and it generates the JSX code for you.<br><br>W H A T <a href="https://t.co/w8JkrZO4lk">pic.twitter.com/w8JkrZO4lk</a></p>&mdash; Sharif Shameem (@sharifshameem) <a href="https://twitter.com/sharifshameem/status/1282676454690451457?ref_src=twsrc%5Etfw">July 13, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-[**Creating an API in Python**](https://beta.openai.com/?app=productivity&example=4_4_0)
+[**Creating an API in Python**](https://twitter.com/SamanyouGarg/status/1295039749221097472?s=20)
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/GPT3?src=hash&amp;ref_src=twsrc%5Etfw">#GPT3</a> generates your API<br><br>I have been exploring the capabilities of GPT-3. Built a demo app on top of it that lets you generate Flask (Python) API code just by describing the functions in English.<br><br>Check it out 👇<br><br>Thanks to <a href="https://twitter.com/OpenAI?ref_src=twsrc%5Etfw">@openai</a> and <a href="https://twitter.com/gdb?ref_src=twsrc%5Etfw">@gdb</a> for providing me access. <a href="https://t.co/bNcRoAHWLQ">pic.twitter.com/bNcRoAHWLQ</a></p>&mdash; Samanyou Garg (@SamanyouGarg) <a href="https://twitter.com/SamanyouGarg/status/1295039749221097472?ref_src=twsrc%5Etfw">August 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
